small fix tailwind

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,8 +1,8 @@
-<section id="card1" class="card">
-  <img src="./assets/miAmor.jpg" alt="Descripción de la imagen" class="card__image">
-  <div class="card__content">
-    <p class="card__title">Lorem Ipsum</p>
-    <p class="card__description">
+<section id="card1" class="group relative w-[400px] h-[400px] text-[#333333] rounded-[10px] flex items-center justify-center overflow-hidden [perspective:1000px] transition-all duration-[700ms] [transition-timing-function:cubic-bezier(0.175,0.885,0.32,1.275)] shadow-[5px_5px_10px_rgba(0,0,0,0.1),_-5px_-5px_10px_rgba(255,255,255,0.7)] hover:scale-105 hover:shadow-[0_8px_16px_rgba(0,0,0,0.3)] hover:bg-[#f2f2f2] hover:text-white">
+  <img src="./assets/miAmor.jpg" alt="Descripción de la imagen" class="w-full h-auto rounded-[3px] transition-all duration-[600ms] [transition-timing-function:cubic-bezier(0.175,0.885,0.32,1.275)]">
+  <div class="text-black absolute top-0 left-0 w-full h-full p-5 bg-[#f2f2f2] [transform:rotateX(-90deg)] origin-bottom transition-all duration-[600ms] [transition-timing-function:cubic-bezier(0.175,0.885,0.32,1.275)] flex flex-col justify-start items-center group-hover:[transform:rotateX(0deg)]">
+    <p class="m-0 pl-[5px] text-[24px] text-black font-bold text-center">Lorem Ipsum</p>
+    <p class="my-[10px] mx-0 text-[14px] text-black leading-[1.4] text-center">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae
       justo vel lorem tincidunt ultrices at non nunc. Donec in sapien viverra,
       tincidunt augue id, efficitur massa.
