--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,11 @@
-
-<main class="main">
-  <header>
-    <app-menu class="menu"></app-menu>
-    <app-search-bar class="searchBar"></app-search-bar>
+<main class="bg-[#e2e2e2] h-screen flex flex-col items-center justify-center">
+  <header class="w-full sticky top-12 h-20 flex items-center justify-center" style="z-index:1000;">
+    <app-menu class="mr-[86vw]"></app-menu>
+    <app-search-bar class="absolute w-3/5"></app-search-bar>
     <app-cart-shopping class="cart"></app-cart-shopping>
   </header>
-  <section class="section-container">
-    <div class="card-grid">
-
-      <app-card></app-card>
-      <app-card></app-card>
-      <app-card></app-card>
+  <section class="flex-1 flex items-center justify-center w-full pt-12 relative mt-[6vh] pl-[3vw] pr-[3vw] h-[30%] max-h-[calc(100vh-10rem)] overflow-y-auto">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 mt-[50rem] gap-16 w-full p-8 justify-items-center">
       <app-card></app-card>
       <app-card></app-card>
       <app-card></app-card>
@@ -20,10 +15,6 @@
       
     </div>
   </section>
-  
-
-  
 </main>
-
 
 <router-outlet />
