--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,12 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Estilos para el scrollbar */
-.section-container {
-    scrollbar-width: inherit;
-    scrollbar-color: black transparent;
-}
-
-.section-container::-webkit-scrollbar-track {
-    background: transparent;
-}
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
