--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="content">
         <div class="text">
-            Login
+            Ingresar
         </div>
         <form action="#">
             <div class="field">
