--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -14,24 +14,19 @@
   <!-- Side Navigation Bar -->
   <div class="side_bar">
     <div class="title">
-      <div class="logo">Ejemplo</div>
-      <label class="button cancel" for="toggleChecker"><i class="fas fa-times"></i></label>
+      <div class="logo">Categorías</div>
+      <label class="button cancel" for="toggleChecker">
+        <i class="fas fa-times"></i>
+      </label>
     </div>
-    <ul>
-      <li><a href="#"><i class="fas fa-qrcode"></i>Dashboard</a></li>
-      <li><a href="#"><i class="fas fa-link"></i>Shortcuts</a></li>
-      <li><a href="#"><i class="fas fa-stream"></i>Overview</a></li>
-      <li><a href="#"><i class="fas fa-calendar-week"></i>Events</a></li>
-      <li><a href="#"><i class="fas fa-question-circle"></i>About</a></li>
-      <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
-      <li><a href="#"><i class="fas fa-phone-volume"></i>Contact</a></li>
-      <li><a href="#"><i class="fas fa-comments"></i>Feedback</a></li>
-    </ul>
-    <div class="media_icons">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-    </div>
+
+    <div class="menu-item">Dashboard</div>
+    <div class="menu-item">Shortcuts</div>
+    <div class="menu-item">Overview</div>
+    <div class="menu-item">Events</div>
+    <div class="menu-item">About</div>
+    <div class="menu-item">Services</div>
+    <div class="menu-item">Contact</div>
+    <div class="menu-item">Feedback</div>
   </div>
 </div>
