--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,7 +6,13 @@
     </header>
     <section
         class="flex-1 flex items-center justify-center w-full pt-12 relative mt-[6vh] pl-[3vw] pr-[3vw] h-[30%] max-h-[calc(100vh-10rem)] overflow-y-auto">
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 mt-[50rem] gap-16 w-full p-8 justify-items-center">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3  gap-16 w-full p-8 justify-items-center">
+            <app-card></app-card>
+            <app-card></app-card>
+            <app-card></app-card>
+            <app-card></app-card>
+            <app-card></app-card>
+            <app-card></app-card>
             <app-card></app-card>
             <app-card></app-card>
             <app-card></app-card>
