--- a/src/app/components/button-pay/button-pay.component.html
+++ b/src/app/components/button-pay/button-pay.component.html
@@ -1,5 +1,5 @@
 <!-- pagar -->
-<div class="container">
+<div class="container" (click)="goToPayment()">
     <div class="left-side">
         <div class="card">
             <div class="card-line"></div>
