--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,4 +1,144 @@
-/* botton*/ 
+/* Estilos para la tarjeta */
+.card {
+  position: relative;
+  width: 430px;
+  height: 450px;
+  color: #333333;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  perspective: -100px;
+  transition: all 700ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px rgba(255, 255, 255, 0.7);
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  background-color: #f2f2f2;
+  color: white;
+}
+
+.card-content-front
+{
+  width: 100%;
+  height: 100%;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card-content-front h1{
+  padding: 0.5rem;
+}
+
+.card-content-front h2{
+  font-size: 20px;
+}
+
+/* Imagen de la tarjeta */
+.card-image {
+  height: auto;
+  border-radius: 10px;
+  transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  width: 80%;
+}
+
+/* Contenido trasero de la tarjeta */
+.card-content-back {
+  color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  background-color: #f2f2f2;
+  transform: rotateX(-90deg);
+  transform-origin: bottom;
+  transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  overflow-y: auto;
+}
+
+.card:hover .card-content-back {
+  transform: rotateX(0deg) ;
+}
+
+/* Título de la tarjeta */
+.card-title {
+  margin: 0;
+  padding-left: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  color: black;
+}
+
+/* Descripción de la tarjeta */
+.card-description {
+  margin: 10px;
+  font-size: 14px;
+  line-height: 1.4;
+  text-align: center;
+  color: black;
+}
+
+/* Grid layout para la información */
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  gap: 10px; 
+  width: 100%;
+  margin-top: 20px;
+
+
+  text-align: center;
+  border-radius: 25px;
+  outline: none;
+    border: none;
+  box-shadow: inset 2px 2px 5px #BABECC,
+        inset -5px -5px 10px #ffffff73;
+  background: #e2e2e2; 
+  padding: 
+  10px;
+}
+
+.grid-item {
+  font-size: 14px;
+  line-height: 1.5;
+  
+  color: black;
+
+  text-align: center;
+  
+}
+
+.grid-item-full {
+  grid-column: span 2; /* Ocupa ambas columnas */
+  font-size: 14px;
+  line-height: 1.5;
+  
+  color: black;
+  text-align: center;
+
+  
+}
+
+
+.info-item {
+  margin: 0;
+  padding: 0;
+}
+
+
+
+/* botton*/
 .cartBtn {
   width: 180px;
   height: 50px;
@@ -11,9 +151,9 @@
   color: white;
   font-weight: 500;
   position: absolute;
-  bottom: 20px; 
-  left: 50%; 
-  transform: translateX(-50%); 
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: rgb(29, 29, 29);
   box-shadow: 0 20px 30px -7px rgba(27, 27, 27, 0.219);
   transition: all 0.3s ease-in-out;
@@ -27,7 +167,7 @@
 
 .cartBtn:active {
   transform: scale(0.96);
-  transform: translateX(-50%); 
+  transform: translateX(-50%);
 }
 
 .product {
