--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -5,12 +5,12 @@
         </div>
         <form action="#">
             <div class="field">
-                <input type="text" required>
+                <input type="text" placeholder=" ">
                 <span class="fas fa-user"></span>
                 <label>Email or Phone</label>
             </div>
             <div class="field">
-                <input type="password" required>
+                <input type="password" placeholder=" ">
                 <span class="fas fa-lock"></span>
                 <label>Password</label>
             </div>
@@ -21,7 +21,7 @@
             
             <div class="sign-up">
                 ¿No eres miembro?
-                <a href="/register">Regístrate ahora</a>
+                <a href="/registry">Regístrate ahora</a>
             </div>
 
         </form>
