--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -126,9 +126,6 @@ body {
         inset -1px -1px 2px #ffffff73;
 }
 
-
-
-
 /* Iconos dentro de los campos */
 .field span {
     position: absolute;
@@ -232,8 +229,9 @@ body {
 }
 
 .upload-icon:hover {
-    background: #2980b9;
+    background: #2364d2;
 }
+
 
 
 /* Navegación */
