--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,25 +1,26 @@
-<main class="bg-[#e2e2e2] h-screen flex flex-col items-center justify-center">
-    <header class="w-full sticky top-12 h-20 flex items-center justify-center" style="z-index:1000;">
-        <app-menu class="mr-[86vw]"></app-menu>
-        <app-search-bar class="absolute w-3/5"></app-search-bar>
-        <app-cart-shopping class="cart"></app-cart-shopping>
-    </header>
-    <section
-        class="flex-1 flex items-center justify-center w-full pt-12 relative mt-[6vh] pl-[3vw] pr-[3vw] h-[30%] max-h-[calc(100vh-10rem)] overflow-y-auto">
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3  gap-16 w-full p-8 justify-items-center">
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
-
-        </div>
-    </section>
+<main class="flex h-screen flex-col items-center justify-center bg-[#e2e2e2]">
+  <header
+    class="sticky flex w-full items-center justify-around bg-[#e2e2e2]/10 p-8"
+    style="z-index: 1000"
+  >
+    <app-menu></app-menu>
+    <app-search-bar class="w-3/5"></app-search-bar>
+    <app-cart-shopping class="cart"></app-cart-shopping>
+  </header>
+  <section
+    class="grid w-full grid-cols-1 justify-items-center gap-16 p-8 pt-20 sm:grid-cols-2 md:grid-cols-3 overflow-y-scroll"
+  >
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+  </section>
 </main>
