--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -7,17 +7,17 @@
             <div class="field">
                 <input type="text" placeholder=" ">
                 <span class="fas fa-user"></span>
-                <label>Email or Phone</label>
+                <label>Email o Username</label>
             </div>
             <div class="field">
                 <input type="password" placeholder=" ">
                 <span class="fas fa-lock"></span>
-                <label>Password</label>
+                <label>Contraseña</label>
             </div>
             <div class="forgot-pass">
-                <a href="/registry">Forgot Password?</a>
+                <a href="/registry">Olvidaste tu  contraseña?</a>
             </div>
-            <button>Sign in</button>
+            <button>Ingresar</button>
             
             <div class="sign-up">
                 ¿No eres miembro?
