small fix front

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -2,7 +2,7 @@
   <div class="card-content-front">
     <h1 class="card-title">nombre contenido</h1>
     <h2 >categoria contenido</h2>
-    <img src="./assets/miAmor.jpg" alt="Descripción de la imagen" class="card-image">
+    <img src="./assets/food-service.png" alt="Descripción de la imagen" class="card-image">
     <p class="card-description">
       contenido": Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae
       justo vel lorem tincidunt ultrices at non nunc. Donec in sapien viverra,
