google maps y drag and drop terminados

--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -1,10 +1,17 @@
 <body>
+    
+    <!-- <app-google-maps></app-google-maps> -->
+    
+    <!-- <app-drag-and-drop-files></app-drag-and-drop-files>-->
+
     <div class="content">
         <div class="text">
             Ingresar
+            
         </div>
         <form action="#">
             <div class="field">
+                
                 <input type="text" placeholder=" ">
                 <span class="fas fa-user"></span>
                 <label>Email o Username</label>
